# ai-leverage-audit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: deps.py  main.py
api/routes/: audit.py  history.py
docs/: AUDIT_FEEDBACK_TEMPLATE.md  BUSINESS_MODEL.md  CYCLES.md  GATE_3_PLAYBOOK.md  GATE_3_RESULTS.md  LIVE_OWNER_REACTION_PLAYBOOK.md  PRODUCT_LIFECYCLE.md  SCORING_MODEL.md
fixtures/feedback/samples/: 01_dental_clinic_feedback.md  02_solo_consultant_feedback.md  03_home_cleaning_feedback.md  04_fitness_studio_feedback.md  05_ecommerce_brand_feedback.md  06_podcaster_feedback.md  07_messy_photographer_feedback.md  08_messy_friend_style.md
fixtures/intakes/: INTAKE_TEMPLATE.md  synthetic_consultant.json
fixtures/intakes/samples/: dental_clinic.json  ecommerce_brand.json  fitness_studio.json  home_cleaning.json  photographer.json  podcaster.json  shopify_operator.json  solo_consultant.json  supermarket_owner.json
fixtures/outcomes/: synthetic_consultant_cycle1_outcome.json
reports/: dental_clinic.json  dental_clinic.md  ecommerce_brand.json  ecommerce_brand.md  fitness_studio.json  fitness_studio.md  home_cleaning.json  home_cleaning.md  photographer.json  photographer.md  podcaster.json  podcaster.md  self.json  shopify_operator.json  shopify_operator.md  solo_consultant.json  solo_consultant.md  supermarket_owner.json  supermarket_owner.md
src/ai_leverage_audit/: __init__.py  agents.py  cli.py  eval_config.py  prompts.py  render.py  schemas.py  workflow.py
tests/: conftest.py  test_continuation_e2e.py  test_intake_validation.py  test_render.py  test_rules.py  test_sample_intakes.py  test_smoke.py  test_workflow_e2e.py
tests/e2e/: conftest.py  mock_api.py  test_intake.py  test_report.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/bet/[id]/: page.tsx
web/app/history/: page.tsx
web/app/intake/: page.tsx
web/app/outcome/[id]/: page.tsx
web/app/report/[id]/: page.tsx
web/lib/: api.ts
