[project]
name = "ai-leverage-audit"
version = "0.0.0"
description = "AI Operating Mentor for solopreneurs and small business owners — diagnoses workflows, identifies AI leverage, designs a 30-day experiment."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

# Note on leverage-platform: deliberately NOT declared as a dependency
# in pyproject.toml. It's a private sibling repo, and listing it via
# [tool.uv.sources] breaks CI (uv tries to resolve it even when its
# extra is excluded). For local development, after `uv sync --extra dev`,
# install the platform with:
#
#     uv pip install -e ../leverage-platform
#
# At Gate 2, when CI must run e2e tests that actually use platform code,
# this gets revisited — either by making leverage-platform public or by
# adding a deploy key. See README.md "Gate 1 vs Gate 2 — CI explanation".

[project.scripts]
audit = "ai_leverage_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_leverage_audit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"
