[project]
name = "ai-leverage-audit"
version = "0.0.0"
description = "AI Operating Mentor for solopreneurs and small business owners — diagnoses workflows, identifies AI leverage, designs a 30-day experiment."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Pinned to leverage-platform SHA 477914f (2026-05-14: cost CLI ships).
    # Bump deliberately when the platform releases something the product wants;
    # uv.lock pins the exact rev and uv won't bump it on `uv sync` unless the
    # spec here changes.
    "leverage-platform @ git+https://github.com/DEV800-ai/leverage-platform.git@477914f752a340aa182a8b6aa11bb8dc03e43e2d",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

# Local development: to work against an in-progress sibling checkout
# instead of the published main branch, override after `uv sync`:
#
#     uv pip install -e ../leverage-platform
#
# Pin to a specific SHA in this file when the platform stabilises and
# we want reproducible builds:
#     "leverage-platform @ git+https://github.com/DEV800-ai/leverage-platform.git@<sha>"

[project.scripts]
audit = "ai_leverage_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_leverage_audit"]

# Required because the leverage-platform dependency uses a direct git URL.
# Pin to a specific SHA once the platform stabilises (see [project.dependencies]).
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (browser + full form submission)"]

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pytest-playwright>=0.5",
    "playwright>=1.44",
]
